# whoami

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.web  config.yaml  docker-compose.yml  pyproject.toml
.sisyphus/: boulder.json
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  middleware.py
backend/app/api/: __init__.py  auth.py  chat.py  evolution.py  knowledge.py  profile.py  voice.py
backend/app/core/: auth.py  model_manager.py  rate_limit.py
backend/app/core/conversation/: __init__.py  context_compressor.py  memory.py  session_manager.py
backend/app/core/evolution/: __init__.py  extractor.py  graph_updater.py  knowledge_updater.py  review_queue.py
backend/app/core/ingestion/: __init__.py  chunker.py  embedder.py  github.py  parser.py  pipeline.py  web_fetcher.py
backend/app/core/llm/: __init__.py  base.py  llamacpp_adapter.py  mock_adapter.py  ollama_adapter.py  vllm_adapter.py
backend/app/core/rag/: __init__.py  context_builder.py  rag_chain.py  reranker.py  retriever.py
backend/app/core/router/: __init__.py  classifier.py  fallback.py  router.py
backend/app/core/storage/: __init__.py  graph_store.py  vector_store.py
backend/app/core/voice/: __init__.py  orchestrator.py  stt.py  tts.py
backend/app/models/: __init__.py  avatar.py  chat.py  config.py  knowledge.py  profile.py  voice.py
backend/scripts/: save_chat.py
desktop/: README.md  package.json
documents/: CHANGELOG.md  README.md  api-spec.md  architecture.md
mobile/: App.tsx  README.md  package.json
models/: config.yaml  download.sh
(+64 files in other folders)
