[project]
name = "digital-twin"
version = "0.1.0"
description = "AI Digital Twin - Local OSS LLM-powered personal clone"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.0",
    "chromadb>=0.5.0",
    "neo4j>=5.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
voice = ["faster-whisper>=1.0", "TTS>=0.22"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
